opam-version: "2.0"
name: "dkml-component-network-ocamlcompiler"
version: "4.12.1~v1.0.2~prerel2"
synopsis: "DKML component for ocamlcompiler"
description:
  "Network installed component for OCaml bytecode and native compiler"
maintainer: ["opensource+diskuv-ocaml@support.diskuv.com"]
authors: ["Diskuv, Inc. <opensource+diskuv-ocaml@support.diskuv.com>"]
license: "Apache-2.0"
homepage: "https://github.com/diskuv/dkml-component-ocamlcompiler"
bug-reports: "https://github.com/diskuv/dkml-component-ocamlcompiler/issues"
depends: [
  "dkml-component-network-unixutils"  {>= "0.1.0"}
  "dkml-component-staging-ocamlrun"   {>= "4.12.1~" & < "4.12.2~"}
  "dkml-component-staging-opam32"     {>= "2.1.0"}
  "dkml-component-staging-opam64"     {>= "2.1.0"}
  "dkml-install"                      {>= "0.2.0"}
  "dune"                              {>= "2.9"}
  "base64"                            {>= "3.5.0"}
  "diskuvbox"                         {>= "0.1.0"}
]
depopts: [
  "dkml-option-vcpkg"
]
build: [
  # OCaml source code
  ["install" "-d" "dl/ocaml/flexdll"]
  ["tar" "xCfz" "dl/ocaml"          "dl/ocaml.tar.gz"   "--strip-components=1"]
  ["tar" "xCfz" "dl/ocaml/flexdll"  "dl/flexdll.tar.gz" "--strip-components=1"]

  # Portable shell scripts for OCaml compiling
  #
  # ** The only portable shell scripts needed are that that compile the bytecode
  # ** interpreter for use in the dkml-component-staging-ocamlrun build:[] section.
  # ** Any other logic needed for compiling the full native-code compiler
  # ** can be done in OCaml bytecode. But since the portable shell scripts
  # ** do 90% of the work needed for the native-code compiler, no strong
  # ** reason (yet) to convert the native-code compiler installation into OCaml
  # ** bytecode.
  #
  #   Create a minimal DKMLDIR (no dkml-runtime-distribution) that can build
  #   the r-c-ocaml-* OCaml compiler. Its structure mimics a
  #   git submodule setup.
  #
  #   <dkmldir>/vendor/drc/
  ["install" "-d" "dkmldir/vendor/drc"]
  ["tar" "xCfz" "dkmldir/vendor/drc" "dl/dkml-runtime-common.tar.gz" "--strip-components=1"]
  #   <dkmldir>/.dkmlroot
  ["install" "dkmldir/vendor/drc/.template.dkmlroot" "dkmldir/.dkmlroot"]

  #   <dkmldir>/vendor/dkml-compiler/
  ["install" "-d" "dkmldir/vendor/dkml-compiler/src"]
  ["tar" "xCfz" "dkmldir/vendor/dkml-compiler" "dl/dkml-compiler.tar.gz" "--strip-components=1"]

  # Build component
  [
    "dune"
    "build"
    "-p"
    name
    "-j"
    jobs
    "--promote-install-files=false"
    "@install"
    "@runtest" {with-test}
    "@doc" {with-doc}
  ]
  ["dune" "install" "-p" name "--create-install-files" name]
]
install: [
  #   Run r-c-ocaml-1-setup.sh ... just the OCaml runtime since not yet relocatable!
  #   With an OCaml runtime that is the same version as the full OCaml system we want
  #   to compile, the OCaml system should be compiled quicker (no bootstrap necessary).
  #
  #   ** It may seem redundant to recreate the same reproducible directory that
  #   ** is available in ocamlrun. BUT ... it is a bad idea to couple the
  #   ** bytecode interpreter that runs the installer plugins to the same
  #   ** version as the OCaml compiler we are installing for the end-user.
  [
    "sh" "-eufc"
    """
    env TOPDIR=dkmldir/vendor/drc/all/emptytop \
      dkmldir/vendor/dkml-compiler/src/r-c-ocaml-1-setup.sh \
      -d dkmldir \
      -t '%{_:share}%/staging-files/generic' \
      -v dl/ocaml \
      -r \
      -k vendor/dkml-compiler/src/standard-compiler-env-to-ocaml-configure-env.sh
    """
  ]

  # 2. Copy assets
  [
    "sh" "-eufcx"
    """
    install -d '%{_:share}%/staging-files/windows_x86'
    install -d '%{_:share}%/staging-files/windows_x86_64'
    rm -rf '%{_:share}%/staging-files/windows_x86'
    rm -rf '%{_:share}%/staging-files/windows_x86_64'
    cp -rp assets/staging-files/win32 '%{_:share}%/staging-files/windows_x86'
    cp -rp assets/staging-files/win32 '%{_:share}%/staging-files/windows_x86_64'
    """
  ]

  # 3. Copy minimal dkmldir into staging, adding distribution which has
  #    PowerShell scripts and other Unix scripts needed by setup-userprofile.ps1

  #   Clone minimal dkmldir
  ["rm" "-rf" "%{_:share}%/staging-files/windows_x86/dkmldir"]
  ["rm" "-rf" "%{_:share}%/staging-files/windows_x86_64/dkmldir"]
  ["cp" "-rp" "dkmldir" "%{_:share}%/staging-files/windows_x86"]
  ["cp" "-rp" "dkmldir" "%{_:share}%/staging-files/windows_x86_64"]
  #   Untar runtime-distribution
  ["install" "-d" "%{_:share}%/staging-files/windows_x86/dkmldir/vendor/drd"]
  ["install" "-d" "%{_:share}%/staging-files/windows_x86_64/dkmldir/vendor/drd"]
  ["tar" "xCfz" "%{_:share}%/staging-files/windows_x86/dkmldir/vendor/drd"    "dl/dkml-runtime-distribution.tar.gz" "--strip-components=1"]
  ["tar" "xCfz" "%{_:share}%/staging-files/windows_x86_64/dkmldir/vendor/drd" "dl/dkml-runtime-distribution.tar.gz" "--strip-components=1"]
]
dev-repo: "git+https://github.com/diskuv/dkml-component-ocamlcompiler.git"
extra-source "dl/ocaml.tar.gz" {
  src: "https://github.com/ocaml/ocaml/archive/4.12.1.tar.gz"
  checksum: "sha256=f5a48a90557cb47ace7b1590fcab1362a1af38629a218350f69c225c57e96a41"
}
extra-source "dl/flexdll.tar.gz" {
  src: "https://github.com/alainfrisch/flexdll/archive/0.39.tar.gz"
  checksum: "sha256=51a6ef2e67ff475c33a76b3dc86401a0f286c9a3339ee8145053ea02d2fb5974"
}
extra-source "dl/dkml-compiler.tar.gz" {
  # TODO: We need a release process for this, or better yet use a normal Opam dependency that
  # has all the content in a share: or lib: folder.
  src: "https://github.com/diskuv/dkml-compiler/archive/refs/tags/4.12.1-v1.0.2-prerel2.tar.gz"
  checksum: [
    "sha256=a275978698d05f29be6569b3c24fe0ac6551802489bc2840bc6fecbf9496f9f8"
  ]
}
extra-source "dl/dkml-runtime-common.tar.gz" {
  src: "https://github.com/diskuv/dkml-runtime-common/archive/refs/tags/1.0.2-prerel5.tar.gz"
  checksum: [
    "sha256=367a4ab0058a68de3fd0c734f881a08159df6367ef51d78468a8263c16edbd86"
  ]
}
extra-source "dl/dkml-runtime-distribution.tar.gz" {
  src: "https://github.com/diskuv/dkml-runtime-distribution/archive/refs/tags/1.0.2-prerel5.tar.gz"
  checksum: [
    "sha256=db0f1b4eca252a7d7185e8357aefc947bac2075e4f617d4d099b81be52ee6db6"
  ]
}
