(library
 (public_name dkml-component-network-ocamlcompiler)
 (name dkml_component_network_ocamlcompiler)
 (libraries
  dkml-install.register
  dkml-component-staging-ocamlrun.api
  dkml-component-staging-dkmlconfdir.api
  bos
  logs
  dkml-component-network-ocamlcompiler.common))

(rule
 (target opts.ml)
 (action
  (with-stdout-to
   %{target}
   (echo "let option_vcpkg_available = %{lib-available:dkml-option-vcpkg}"))))
