(library
 (public_name dkml-component-ocamlcompiler-network)
 (name dkml_component_ocamlcompiler_network)
 (libraries
  dkml-install.register
  dkml-component-staging-ocamlrun.api
  dkml-component-staging-dkmlconfdir.api
  bos
  logs
  dkml-component-ocamlcompiler-common))

(rule
 (target opts.ml)
 (action
  (with-stdout-to
   %{target}
   (echo "let option_vcpkg_available = %{lib-available:dkml-option-vcpkg}"))))
