(executable
 (name setup_machine)
 (public_name setup_machine)
 (package dkml-component-ocamlcompiler-network)
 (modes
  (byte exe))
 (libraries
  dkml-component-ocamlcompiler-common
  dkml-install.api
  bos
  fpath
  base64
  cmdliner
  logs
  logs.cli
  logs.fmt
  fmt.cli
  fmt.tty))

(install
 (section share)
 (package dkml-component-ocamlcompiler-network)
 (files
  (setup_machine.bc as staging-files/generic/setup_machine.bc)))
