(library
 (name model_conf)
 (libraries sexplib dkml-component-staging-dkmlconfdir.api)
 (modules model_conf)
 (preprocess
  (pps ppx_sexp_conv)))

(test
 (name test_model_conf)
 (libraries alcotest model_conf dkml-component-staging-dkmlconfdir.api)
 (modules test_model_conf))

(executable
 (name setup_userprofile)
 (public_name setup_userprofile)
 (package dkml-component-network-ocamlcompiler)
 (modes
  (byte exe))
 (libraries
  dkml-component-network-ocamlcompiler.common
  dkml-install.api
  dkml-component-staging-dkmlconfdir.api
  diskuvbox
  model_conf
  bos
  fpath
  base64
  cmdliner
  logs
  logs.cli
  logs.fmt
  fmt.cli
  fmt.tty)
 (modules setup_userprofile)
 (preprocess
  (pps ppx_sexp_conv)))

(install
 (section share)
 (package dkml-component-network-ocamlcompiler)
 (files
  (setup_userprofile.bc as staging-files/generic/setup_userprofile.bc)))
