(executable
 (name uninstall_userprofile)
 (public_name uninstall_userprofile)
 (package dkml-component-network-ocamlcompiler)
 (modes
  (byte exe))
 (libraries
  dkml-component-network-ocamlcompiler.common
  dkml-install.api
  diskuvbox
  bos
  fpath
  base64
  cmdliner
  logs
  logs.cli
  logs.fmt
  fmt.cli
  fmt.tty))

(install
 (section share)
 (package dkml-component-network-ocamlcompiler)
 (files
  (uninstall_userprofile.bc as staging-files/generic/uninstall_userprofile.bc)))
